# ecn_mpc

./: .gitignore  CMakeLists.txt  Readme.md  package.xml
ecn_mpc/: __init__.py  dompc.py  splines.py
examples/acados/: main.py
examples/dompc/: triple_pendulum.py  unicycle.py
launch/: sim_launch.py  zoe.rviz
launch/params/: nav2.yaml
model/: acados_ocp.json  minimal_example_closed_loop.py  minimal_example_ocp.py
model/c_generated_code/: Makefile  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h
model/c_generated_code/pendulum_ode_cost/: pendulum_ode_cost_y_0_fun.c  pendulum_ode_cost_y_0_fun_jac_ut_xt.c  pendulum_ode_cost_y_0_hess.c  pendulum_ode_cost_y_e_fun.c  pendulum_ode_cost_y_e_fun_jac_ut_xt.c  pendulum_ode_cost_y_e_hess.c  pendulum_ode_cost_y_fun.c  pendulum_ode_cost_y_fun_jac_ut_xt.c  pendulum_ode_cost_y_hess.c
model/c_generated_code/pendulum_ode_model/: pendulum_ode_impl_dae_fun.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u_z.c  pendulum_ode_impl_dae_fun_jac_x_xdot_z.c  pendulum_ode_impl_dae_jac_x_xdot_u_z.c
scripts/: navigator  plan2traj
src/: acados_api.py  control.py  dompc_api.py
